[gd_scene load_steps=2 format=3 uid="uid://mapscene001"]

[ext_resource type="Script" path="res://scripts/map/map_scene.gd" id="1_map"]

[node name="MapScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_map")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 200.0
offset_bottom = 20.0
text = "SELECT YOUR PATH"

[node name="MapContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 25.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -25.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 0

[node name="HPLabel" type="Label" parent="StatusBar"]
layout_mode = 2
text = "HP:"

[node name="HPBar" type="ProgressBar" parent="StatusBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
max_value = 150.0
value = 150.0
show_percentage = false

[node name="Spacer" type="Control" parent="StatusBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="GoldLabel" type="Label" parent="StatusBar"]
layout_mode = 2
text = "Gold: 50"

[node name="InfoPanel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 260.0
offset_top = 50.0
offset_right = 374.0
offset_bottom = 130.0

[node name="InfoLabel" type="Label" parent="InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
text = "Node Info"
